refactor: rename frontend fields to English
