# src/backend/src/routes/index.js
@@ -3,7 +3,6 @@ import { appointmentRoutes } from "./appointment.routes.js";
 import { authRoutes } from "./auth.routes.js";
 import { barberRoutes } from "./barber.routes.js";
 import { clientRoutes } from "./client.routes.js";
-import { schedulingRoutes } from "./scheduling.routes.js";
 import { serviceRoutes } from "./service.routes.js";
 import { isDatabaseConnected } from "../config/database.js";
 import { requireDatabase } from "../middlewares/databaseMiddleware.js";
@@ -25,4 +24,3 @@ routes.use("/services", requireDatabase, serviceRoutes);
 routes.use("/barbers", requireDatabase, barberRoutes);
 routes.use("/clients", requireDatabase, clientRoutes);
 routes.use("/appointments", requireDatabase, appointmentRoutes);
-routes.use("/scheduling", requireDatabase, schedulingRoutes);
